--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -5,7 +5,9 @@
   justify-content: space-evenly;
   align-items: center;
   background: url("../assets/images/cart-background.jpg");
-  min-height: 89%;
+  min-height: 92.5%;
+  position: relative;
+  top: 50px;
 }
 .cart-item-img {
   width: 100px;
@@ -37,12 +39,38 @@
 }
 .cart-item-price {
   margin-left: 50px;
+  font-weight: bold;
 }
 .checkout {
   width: 100px;
-  height: 50px;
+  height: 30px;
   color: white;
   background-color: black;
-
+  margin-top: 20px;
+  margin-bottom: 20px;
   cursor: pointer;
+}
+.total {
+  font-weight: bolder;
+}
+@media only screen and (max-width: 650px) {
+  .cart-item-details {
+    flex-direction: column;
+  }
+  .cart-item {
+    width: 400px;
+  }
+  .remove-cart-item {
+    width: 100px;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 20px;
+  }
+  .cart-buttons {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .cart-item-title {
+    font-size: 12px;
+  }
 }
