--- a/src/styles/ItemPage.css
+++ b/src/styles/ItemPage.css
@@ -1,7 +1,9 @@
 .item-page {
-  height: 92%;
+  height: 92.5%;
   background: url("../assets/images/item-page-background.jpg");
   margin-top: -20px;
+  position: relative;
+  top: 50px;
 }
 .item-page-image {
   width: 300px;
@@ -40,4 +42,17 @@
   background-color: black;
   font-size: 24px;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 650px) {
+  .item-details {
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 40px;
+  }
+  .item-page {
+    height: auto;
+    min-height: 90%;
+    margin-bottom: -20px;
+  }
 }
