--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -3,6 +3,10 @@
   justify-content: space-between;
   background-color: black;
   color: white;
+  position: fixed;
+
+  z-index: 2;
+  width: 100%;
 }
 .nav-link {
   width: 150px;
@@ -31,4 +35,10 @@ a {
   height: 20px;
   border-radius: 50%;
   color: black;
+}
+@media only screen and (max-width: 650px) {
+  .nav-link {
+    width: 100px;
+    height: 50px;
+  }
 }
